test/corpus/L1/positive/keyword-message.st
"---
id: keyword-message
kind: positive
phase: parse
layer: L1
spec: anexoA:message.keyword
origin: spec-ANSI
section: message.keyword
note: keyword send binds looser than binary
---"
2 max: 3 + 4
