test/corpus/L1/negative/unterminated-comment.st
"---
id: unterminated-comment
kind: negative
phase: lex
layer: L1
spec: anexoA:error.unterminated-comment
origin: spec-ANSI
section: error.unterminated-comment
codes: E_UNTERMINATED_COMMENT
---"
"abc
